src/objects/Town__c.object
<CustomObject>
    <fields>
        <fullName>Filtering_Status__c</fullName>
        <label>Filtering Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>On-Going</fullName>
                </value>
                <value>
                    <fullName>Proceed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Non-Viable</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Contact_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Contact Successful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Zone__c</fullName>
        <label>Load Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEMA</fullName>
                </value>
                <value>
                    <fullName>SEMA</fullName>
                </value>
                <value>
                    <fullName>WCMA</fullName>
                </value>
                <value>
                    <fullName>WCMA/SEMA</fullName>
                </value>
                <value>
                    <fullName>NEMA/SEMA</fullName>
                </value>
                <value>
                    <fullName>NEMA/WCMA</fullName>
                </value>
                <value>
                    <fullName>Oran</fullName>
                    <isActive>false</isActive>
                    <label>Oran</label>
                </value>
                <value>
                    <fullName>WCMA/NEMA</fullName>
                    <isActive>false</isActive>
                    <label>WCMA/NEMA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>RI</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Town_Last_Contacted__c</fullName>
        <inlineHelpText>Date of last contact with town</inlineHelpText>
        <label>Town Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National Grid</fullName>
                </value>
                <value>
                    <fullName>Eversource</fullName>
                </value>
                <value>
                    <fullName>Eversource/Muni</fullName>
                </value>
                <value>
                    <fullName>Eversource/NGRID</fullName>
                </value>
                <value>
                    <fullName>Municipal/NGRID</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>Green Mountain Power</fullName>
                </value>
                <value>
                    <fullName>Orange &amp; Rockland</fullName>
                </value>
                <value>
                    <fullName>PSE&amp;G</fullName>
                </value>
                <value>
                    <fullName>SCE&amp;G</fullName>
                </value>
                <value>
                    <fullName>Unitil</fullName>
                </value>
                <value>
                    <fullName>Green Mountain</fullName>
                    <isActive>false</isActive>
                    <label>Green Mountain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Town</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Town Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Towns</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>